--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -21,6 +21,12 @@ html, body, #__next {
   background: #fff;
 }
 
+.ant-menu-title-content {
+	font-family: 'Space Grotesk', sans-serif !important;
+  font-size: 16.8px;
+  font-weight: 600;
+}
+
 .ant-menu-horizontal > .ant-menu-item::after {
   border-bottom: none !important;
 }
